admin/src/shared/components/DashboardTables/tableStyle.css
.dashboard-table .tabulator-tableHolder::-webkit-scrollbar {
   width: 5px;
}
.dashboard-table .tabulator-tableHolder::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
.dashboard-table .tabulator-tableHolder::-webkit-scrollbar-thumb {
   background-color: #787a91;
   outline: 1px solid #eeeeee;
   border-radius: 10px;
}
.dashboard-table {
   width: 100%;
   max-height: 216px !important;
}
.dashboard-table .tabulator-header {
   height: 40px;
}
.tabulator-col .tabulator-col {
   background-color: #ffffff !important;
}
.dashboard-table .tabulator-headers {
   padding-top: 3px;
}

